--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <title>Gulp Starter Files</title>
   </head>
   <body>
-    <h1>GULP</h1>
+    <header><h1>GULP</h1></header>
+
     <script src="./js/app.js"></script>
   </body>
 </html>
